--- a/www/index.html
+++ b/www/index.html
@@ -86,8 +86,7 @@ function createPost(author, content) {
     };
 
     // この下の行を消して、投稿処理を記述
-    console.log('ボタンが押されました')
-    // この上の行を消して投稿処理を記述
+    postsRef.push(postData)
     // 行末に 「;」 を付けないこと
     .then(() => {
         showMessage('投稿が完了しました！');
@@ -180,7 +179,7 @@ $(function() {
     <div class="container">
         <h1>掲示板アプリ</h1>
 
-        <!-- メッセージ表示エリア -->
+        <!-- メッセージ表示エリア(失敗しましたが出るとこ) -->
         <div id="messageArea"></div>
 
         <!-- 投稿フォーム -->
